# fantasy_nba

./: .gitignore  Makefile  README.md  debug.log.2022-10-15_19  debug.log.2022-10-15_23  debug.log.2022-10-16_13  debug.log.2022-10-28_08  debug.log.2023-01-24_18  debug.log.2023-01-25_08  docker-compose.yml  logging.ini  main.py  pyproject.toml
common/: constants.py  datasets.py  datetime_utils.py  db.py  sqlite.py  utils.py
data/: clear_db.py  db.py  db_seeds.py  enums.py
db/: sqlite_fantasynba
logs/: __init__.py  logging.ini
models/: __init__.py  fantasy_roster.py  league.py  player.py  player_stats.py  schedule.py  team.py
render/: free_agent.py  game_gap.py  main.py  matchup.py  multipage.py  playerschedule.py  schedule.py  tables.py  team_schedule.py
scripts/: transcribe_yt.ipynb
src/: amplifiers.py  league.py  players.py  projections.py  rosters.py  schedule.py  week_vw.py
src/common/: constants.py  utils.py
src/espn/: league.py
src/ingest/: player.py  player_stats.py  roster.py  schedule.py  schedule_raw.py
src/process/: player_schedule_points.py
src/view/: player_points.py  roster.py
tests/: test_fantasy_nba.py
