[tool.poetry]
name = "fantasy_nba"
version = "0.1.0"
description = ""
authors = ["Jelle Vegter <jelle.vegter@nederlandseloterij.nl>"]

[tool.poetry.dependencies]
python = "^3.9.10"
espn-api = "^0.25.0"
streamlit = "^1.13.0"
asyncio = "^3.4.3"
pandas = "^1.5.0"
lxml = "^4.9.1"
aiohttp = "^3.8.3"
html5lib = "^1.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
