[tool.poetry]
name = "fantasy_nba"
version = "0.1.0"
description = ""
authors = ["Jelle Vegter <jelle.vegter@nederlandseloterij.nl>"]
packages = [
    { include = "common" },
    { include = "src" },
    { include = "models" },
]

[tool.poetry.dependencies]
python = "^3.11.1"
streamlit = "^1.13.0"
asyncio = "^3.4.3"
pandas = "^1.5.0"
lxml = "^4.9.1"
aiohttp = "^3.8.3"
html5lib = "^1.1"
beautifulsoup4 = "^4.11.1"
watchdog = "^2.2.1"
sqlalchemy = "^2.0.21"
polars = "^0.19.6"
connectorx = "^0.3.2"
espn-api = "0.32.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
